--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -1,6 +1,6 @@
 :root {
     font-size: 60%;
-  --color-background: #c7d7fe;
+  --color-background: #E0F2FE;
   --color-primary-lighter: #0ea5e9;
   --color-primary-light: #0284c7;
   --color-primary: #0369a1;
