--- a/frontend/src/assets/styles/global.css
+++ b/frontend/src/assets/styles/global.css
@@ -1,15 +1,15 @@
 :root {
     font-size: 60%;
   --color-background: #E0F2FE;
-  --color-primary-lighter: #0ea5e9;
-  --color-primary-light: #0284c7;
-  --color-primary: #0369a1;
+  --color-primary-lighter: #ffaea8;
+  --color-primary-light: #ff9e9e;
+  --color-primary: #201F25;
   --color-primary-dark: #075985;
   --color-primary-darker: #0c4a6e;
-  --color-secundary: #16a34a;
-  --color-secundary-dark: #15803d;
+  --color-secundary: #25ced5;
+  --color-secundary-dark: #1ea4aa;
   --color-title-in-primary: #FFFFFF;
-  --color-text-in-primary: #38bdf8;
+  --color-text-in-primary: #26bac0;
   --color-text-title: #082f49;
   --color-text-complement: #9C98A6;
   --color-text-base: #617180;
